# ninja-api

./: README.md  arquivo.txt  pyproject.toml  requirements.txt
backend/: api.py  settings.py  urls.py
usuarios/: api.py  models.py  routers.py  schema.py
usuarios/controllers/: __init__.py  authController.py  userController.py
usuarios/migrations/: 0001_initial.py  0002_alter_user_table.py
usuarios/schema/: __init__.py  loginSchema.py  mixin.py  userSchema.py
usuarios/services/: __init__.py  authService.py  userService.py
